--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/title_text"
             android:layout_centerInParent="true"
-            android:background="#fff"
+            android:textColor="#fff"
             android:textSize="20sp"/>
         <Button
             android:layout_width="25dp"
